--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
 
-.html,body{
-  height: 100vh;
-}
 .App{
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
   padding-top: 10px;
   background-color: #1b1b32;
@@ -13,6 +10,7 @@
 flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box; /*NO SCROLLING*/
 }
 
 .logo-contenedor {
